--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>VP - AW coordinate converter</title>
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/Main.css" rel="stylesheet">
+    <link href="css/Main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -77,6 +77,6 @@
 <scripts>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="/js/Main.js"></script>
+    <script src="js/Main.js"></script>
 </scripts>
 </html>
