added link to reference spreadsheet

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                 <input readonly id="terrNodeCellZ" type="number" placeholder="CellZ">
             </label>
         </form>
+
+        <hr />
+
+        <a href="https://docs.google.com/spreadsheets/d/1zK9xh0se9edJRqWWdNZn7USKsZwdkrrnKrEJe1pf0RA/edit?usp=sharing">Reference spreadsheet</a>
     </div>
 </div>
 </body>
